Explicilty create data dirs as needed.

--- a/notebooks/Flight Reports Data.ipynb
+++ b/notebooks/Flight Reports Data.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "Download the flight report data from the Bureau of Transportation for a range of years. This data comes from: https://transtats.bts.gov/Fields.asp?gnoyr_VQ=FGJ\n",
     "\n",
-    "Use the script downloadFlightsETL.sh to download CSV files for one or more years."
+    "Use the script downloadFlightsETL.sh to download CSV files for one or more years.\n",
+    "\n",
+    "NOTE: This script does not rely on Python. It is purely shell scripting."
    ]
   },
   {
