--- a/notebooks/Flight Streaming Data.ipynb
+++ b/notebooks/Flight Streaming Data.ipynb
@@ -5,31 +5,30 @@
    "id": "52651355-8a61-4a92-b874-34de0d780906",
    "metadata": {},
    "source": [
-    "# Flight St Data\n",
+    "# Flight Streaming Data\n",
     "\n",
     "This directory has code and schemas for interacting with the streaming data from OpenSky.\n",
     "\n",
-    "The python folder contains code to use with Cloud Function that will pull the latest data from OpenSky and store each\n",
-    "record as a separate file in GCS. The schema folder has definitions for data content for use by BigQuery and/or \n",
-    "DataFlow.\n",
+    "The python/flight/stream folder contains code that will pull the latest data from OpenSky and store the data in GCS and/or publish the data as messages in a Pub/Sub queue.\n",
+    "\n",
+    "## How to Run Locally\n",
+    "\n",
+    "To execute the Python code, you will need to follow the instructions in the README (displayed in the main page in the GitHub repository.) You only need to set up your Python environment if you want to run the code from Cloud Shell (to test it out without using Cloud Function.)\n",
+    "\n",
+    "## How to Run Serveless\n",
+    "\n",
+    "To run using a Cloud Function (aka. using serverless computing) you supply the code and a list of required libraries to Cloud Function, connect the function to Cloud Storage or a Pub/Sub queue, and provide the function with permission to access your Cloud Storage bucket or your Pub/Sub queue. You can then create a Big Query table from either the Cloud Storage bucket or the Pub/Sub queue using the provided schemas.\n",
     "\n",
     "## Schemas\n",
     "\n",
-    "The schema folder has schemas used in BigQuery and in connecting a Pub/Sub topic to a BigQuery table.\n",
-    "BigQuery schemas are used when you create a table from scratch. DataFlow jobs that transfer messages from a Pub/Sub \n",
-    "topic to BigQuery, creating a table if it does not exist or appending to an existing table, will need a schema that \n",
-    "defines the contents of the messages in the topic. The schema needed by DataFlow uses different types than BigQuery.\n",
+    "The schema folder has schemas used both for BigQuery tables as well as for connecting a Pub/Sub topic to a BigQuery table.\n",
+    "BigQuery schemas are used when you create a table and do not select to autodetect the schema. \n",
     "\n",
-    "**bqDataFlow_opensky_noAvroStringDates_schmea.json** -- this is a schema that DataFlow can recognize which defines the\n",
-    "fields in the OpenSky records in a Pub/Sub topic. The types used in this schema will not be recognized by BigQuery,\n",
-    "only by DataFlow.\n",
+    "To create a table as an endpoint for messages published in a Pub/Sub topic will also need a schema that defines how to create columns out of the contents of the messages. The schema needed by DataFlow uses different types names than BigQuery.\n",
     "\n",
-    "**not_used** -- a directory of other schemas used for various tools which are not necessarily needed. The Avro schemas\n",
-    "are used when applying a schema to a Pub/Sub topic. Avro schema is yet another type of schema that is not compatible\n",
-    "with BigQuery nor with DataFlow.\n",
+    "**schema/openSky_bigQuery.json** -- a schema that can be used when loading data from Cloud Storage.\n",
     "\n",
-    "**not_used/bqDestination_opensky_noAvro_schema.json** -- you may find this schema helpful if you want to create a\n",
-    "table linked to a folder in a GCS bucket which is filled with records from OpenSky."
+    "**schema/openSky_dataFlow.json** -- a schema that defines how to map the fields in a Pub/Sub message to columns."
    ]
   },
   {
