Updated the schema for the Big Query table that is the destination for the Open Sky flight streaming data. Added some example messages that are produced by the code into a Pub/Sub queue when "pubsub" is set to true. Added a couple of references to the OpenSky API code and documentation.

--- a/notebooks/Flight Streaming Data.ipynb
+++ b/notebooks/Flight Streaming Data.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Flight Streaming Data\n",
     "\n",
-    "This directory has code and schemas for interacting with the streaming data from OpenSky.\n",
+    "This directory has code and schemas for interacting with the streaming data from the [OpenSky Network](https://opensky-network.org).\n",
     "\n",
-    "The python/flight/stream folder contains code that will pull the latest data from OpenSky and store the data in GCS and/or publish the data as messages in a Pub/Sub queue.\n",
+    "The python/flight/stream folder contains code that will pull the latest data from OpenSky and store the data in GCS and/or publish the data as messages in a Pub/Sub queue. The documentation for the OpenSky API is found at [https://openskynetwork.github.io/opensky-api/](https://openskynetwork.github.io/opensky-api/).\n",
     "\n",
     "## How to Run Serveless\n",
     "\n",
